[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "opentimelineio-raven"
version = "0.1.0"
description = "OTIO Viewer - C++ executable bundled as a Python package"
authors = [{ name = "Your Name", email = "your@email.com" }]
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.7"

[project.scripts]
raven = "otio_raven._wrapper:main"

[tool.scikit-build]
cmake.version = ">=3.10"
cmake.build-type = "Release"
wheel.packages = ["python/otio_raven"]
wheel.install-dir = "otio_raven"
